the plan change

--- a/Dissertation/dictionary.tex
+++ b/Dissertation/dictionary.tex
@@ -37,4 +37,8 @@
 
 \textbf{ЭП} : Электрические приемники
 
+\textbf{IDE} : Интегрированная среда разработки
 
+\textbf{MLE} : Функция правдоподобия 
+
+\textbf{MVU} : Оценка с минимальной несмещенной дисперсией
