--- a/Synopsis/content.tex
+++ b/Synopsis/content.tex
@@ -27,13 +27,12 @@
 исследований, проводимых в~рамках данной диссертационной работы,
 приводится обзор научной литературы по изучаемой проблеме,
 формулируется цель, ставятся задачи работы, излагается научная новизна
-и практическая значимость представляемой работы. В~последующих главах
-сначала описывается общий принцип, позволяющий \dots, а~потом идёт
-апробация на частных примерах: \dots  и~\dots.
+и практическая значимость представляемой работы. 
+%В~последующих главах сначала описывается общий принцип, позволяющий \dots, а~потом идёт апробация на частных примерах: \dots  и~\dots.
 
 
 \underline{\textbf{Первая глава}} посвящена %\dots
-Математическим основам построения алгоритмов оценки параметров гармоник:
+математическим основам построения алгоритмов оценки параметров гармоник:
 \begin{itemize}
 \item Особенности сигналов в электрических сетях носят не существенный характер с точки зрения построения алгоритмов нахождения параметров гармоник. При работе с электрическими сетями обычно используют стандартные алгоритмы такого рода.
 \item Помимо обычных алгоритмов для оценки параметров гармоник в электрических сетях также используют алгоритмы, анализирующие сигналы в переходных режимах, т.~е. такие, в которых во время работы алгоритма может измениться значение какого-либо параметра. В нашей работе такие алгоритмы далее рассматриваться не будут, поскольку переходные режимы не являются целью нашей работы.
@@ -42,20 +41,6 @@
 \item Для решения задачи построения оптимального алгоритма для анализа спектра сигнала в электрических сетях необходимо уточнение математической модели спектра сигналов в части, описывающей точность оценки (дисперсию) параметров гармоник спектра многотонального сигнала.
 \end{itemize}
 
-
-% картинку можно добавить так:
-%\begin{figure}[ht]
-%  \centerfloat{
-%    \includegraphics[scale=0.27]{latex}
-%  }
-%  \caption{Подпись к картинке.}\label{fig:latex}
-%\end{figure}
-%
-%Формулы в строку без номера добавляются так:
-%\[
-%  \lambda_{T_s} = K_x\frac{d{x}}{d{T_s}}, \qquad
-%  \lambda_{q_s} = K_x\frac{d{x}}{d{q_s}},
-%\]
 
 \underline{\textbf{Вторая глава}} посвящена математическим основам построения алгоритмов оценки параметров гармоник:
 
@@ -72,6 +57,21 @@
 
 \item Алгоритмы для нахождения оптимальной несмещенной оценки параметров могут быть построены на основе методов оптимального приема, изучаемых в радиотехники, в частости, с помощью корреляционного анализа.
 \end{itemize}
+
+
+Спектральные составляющие на частотах, расположенных между двух последовательных гармонических частот, возникают при наличии в сигнале интергармонических составляющих. 
+Заметные интергармоники появляются в узком диапазоне частот: $35-75$ Гц, $150-160$ Гц. 
+Модель сигнала электрической сети с учетом , связывает гармоники, высшие гармоники и интергармоники тока и напряжения электрической сети при наличии шума: 
+
+\begin{equation}
+	\label{eq:equation13}
+	s_{t}=a_{0}\sin(\omega_{0}t + \phi_{0})
+\end{equation}
+
+
+
+
+
 
 \underline{\textbf{Третья глава}} посвящена исследованию численных методов для нахождение оптимальной несмещенной оценки параметров гармоник:
 
