--- a/biblio/author — копия.bib
+++ b/biblio/author — копия.bib
@@ -42,6 +42,17 @@
   publisher = {IEEE},
 }
 
+@Article{альтман2020граница,
+  author    = {Альтман, ЕА and Васеева, ТВ and Александров, АВ},
+  journal   = {Динамика систем, механизмов и машин},
+  title     = {ГРАНИЦА КРАМЕРА-РАО ДЛЯ АМПЛИТУДЫ ГАРМОНИКИ ПРИ ИСПОЛЬЗОВАНИИ ОКОННЫХ ФУНКЦИЙ},
+  year      = {2020},
+  number    = {2},
+  pages     = {145--152},
+  volume    = {8},
+  publisher = {федеральное государственное бюджетное образовательное учреждение высшего~…},
+}
+
 @ARTICLE{vakbib2,
   author = {Фамилия, И. О. and Фамилия2, И. О. and Фамилия3, И. О. and Фамилия4, И. О.},
   addendum = {(0,33~п.~л.~/ 0,28~п.~л.; ВАК)},
@@ -55,21 +66,138 @@
   authorvak = {true},
 }
 
-@Standard{GOST30804.4.30-2013,
-  organization = {М.: Стандартинформ},
+@InProceedings{vaseeva2019comparative,
+  author    = {Васеева, ТВ and Альтман, ЕА and Елизаров, ДА},
+  booktitle = {Инновационные проекты и технологии в образовании, промышленности и на транспорте},
+  title     = {Сравнительный анализ методов определения параметров гармоник сигнала электрической сети},
+  year      = {2019},
+  pages     = {261--267},
+  keywords  = {качество электрической энергии, гармоники, интергармоники, оконная функция},
+  url       = {https://elibrary.ru/download/elibrary_37530330_61900460.pdf},
+}
+
+@InProceedings{васеева2018применение,
+  author    = {Васеева, Татьяна Валерьевна and Альтман, Евгений Анатольевич and Малютин, Андрей Геннадьевич},
+  title     = {Применение быстрых алгоритмов для выполнения фильтрации изображений},
+  booktitle = {Современные проблемы радиоэлектроники},
+  year      = {2018},
+  pages     = {162--165},
+}
+
+@InProceedings{васеева2019,
+  author    = {Васеева, ТВ and Альтман, ЕА and Александров, АВ},
+  booktitle = {Системы управления, информационные технологии и математическое моделирование},
+  title     = {Сравнительный анализ применения алгоритмов определения частоты при оценке гармоник в электрических сетях},
+  year      = {2019},
+  pages     = {61--66},
+  keywords  = {цифровая обработка сигналов, качество электрической энергии, гармоники, алгоритмы, Быстрое Преобразование Фурье},
+  url       = {https://elibrary.ru/download/elibrary_38249025_91173531.pdf},
+}
+
+@InProceedings{альтман2018расширение,
+  author    = {Альтман, ЕА and Афанасьева, НС and Васеева, ТВ},
+  title     = {Расширение глубины резкости изображений программным способом},
+  booktitle = {Инновационные проекты и технологии в образовании, промышленности и на транспорте},
+  year      = {2018},
+  pages     = {222--227},
+  keywords  = {глубина резкости, вычислительная фотография, стекирование изображений, особые точки, детектор особых точек, гомография, размытие гаусса, лаплассиан, сшивка изображений},
+}
+
+@Article{васееваисследование,
+  author   = {Васеева, Татьяна Валериевна and Альтман, Евгений Анатольевич},
+  journal  = {Информационные и управляющие системы на транспорте и в},
+  title    = {Исследование точности математических моделей алгоритмов реализованных на языках высокого уровня},
+  year     = {2018},
+  pages    = {236--243},
+  keywords = {быстродействия алгоритмов, временные затраты, свертка},
+  url      = {https://elibrary.ru/download/elibrary_35626656_49101388.pdf},
+}
+
+@InProceedings{александров2018оценка,
+  author    = {Александров, Александр and Васеева, Татьяна and Ананьева, Надежда},
+  title     = {Оценка эффективности алгоритма корреляции для различных аппаратных платформ},
+  booktitle = {Тезисы XIX Всероссийской конференции молодых учёных по математическому моделированию и информационным технологиям},
+  year      = {2018},
+  pages     = {54--54},
+  url       = {https://elibrary.ru/download/elibrary_36395606_65823953.pdf},
+}
+
+@InProceedings{васеева2018информационно,
+  author    = {Васеева, ТВ and Альтман, ЕА and Елизаров, ДА},
+  title     = {Информационно-измерительная система для анализа гармоник сигнала в электрической сети},
+  booktitle = {САПР и моделирование в современной электронике},
+  year      = {2018},
+  pages     = {131--135},
+  doi       = {10.30987/conferencearticle_5c19e5fbf19926.94126870},
+  url       = {http://www.niiatm.ru/misapr/article140},
+}
+
+@Article{Васеева2017,
+  author   = {Васеева, Татьяна Валериевна and Александров, Александр Владимирович},
+  journal  = {ТЕХНОЛОГИЧЕСКОЕ ОБЕСПЕЧЕНИЕ РЕМОНТА И ПОВЫШЕНИЕ ДИНАМИЧЕСКИХ КАЧЕСТВ ЖЕЛЕЗНОДОРОЖНОГО ПОДВИЖНОГО СОСТАВА},
+  title    = {Реализация алгоритмов вычисления корреляции для диагностирования подвижного состава методами корреляционного анализа},
+  year     = {2017},
+  keywords = {корреляционный анализ, коэффициент корреляции, корреляция},
+  url      = {https://elibrary.ru/download/elibrary_32167635_26178414.pdf},
+}
+
+@InProceedings{терентьева2017алгоритм,
+  author    = {Терентьева, АВ and Васеева, ТВ and Кильдибеков, АБ},
+  booktitle = {Инновационные проекты и технологии в образовании, промышленности и на транспорте},
+  title     = {Алгоритм детектирования лиц в различных ракурсах и наклонах},
+  year      = {2017},
+  pages     = {250--255},
+  keywords  = {компьютерное зрение, алгоритмы распознавания лиц, библиотека opencv, метод виолы-джонса, каскады хаара, мобильное приложение, зеркало, python},
+  url       = {https://elibrary.ru/download/elibrary_29370837_30585305.pdf},
+}
+
+@InProceedings{васеева2017распознавание,
+  author    = {Васеева, Татьяна},
+  title     = {Распознавание границ движущихся объектов методами компьютерного зрения},
+  booktitle = {Информационно-телекоммуникационные системы и технологии},
+  year      = {2017},
+  pages     = {304--306},
+  url       = {https://elibrary.ru/download/elibrary_30520539_86047036.pdf},
+}
+
+@Article{альтман2017применение,
+  author    = {Альтман, Евгений Анатольевич and Захаренко, Елена Игоревна and Васеева, Татьяна Валериевна},
+  journal   = {Научный вестник Новосибирского государственного технического университета},
+  title     = {Применение метода разложения двумерной свертки при реализации цифровых фильтров},
+  year      = {2017},
+  number    = {4},
+  pages     = {95--104},
+  doi       = {10.17212/1814-1196-2017-4-95-104},
+  keywords  = {двумерная свертка, корреляция, цифровой фильтр, обработка изображений, быстрые алгоритмы, оценка эффективности, ядро фильтра, цифровой сигнал},
+  publisher = {Федеральное государственное бюджетное образовательное учреждение высшего~…},
+  url       = {https://journals.nstu.ru/vestnik/catalogue/contents/view_article?id=15526},
+}
+
+@InProceedings{альтман2019кэш,
+  author    = {Альтман, Евгений Анатольевич and Васеева, Татьяна Валериевна and Александров, Александр Владимирович},
+  title     = {Кэш-ориентированный алгоритм для вычисления многомерной корреляции},
+  booktitle = {Проблемы машиноведения},
+  year      = {2019},
+  pages     = {385--389},
+  keywords  = {свертка, корреляция, кэш память, алгоритм обработки, шаблоны},
+  url       = {https://elibrary.ru/download/elibrary_37541855_29354836.pdf},
+}
+
+@Standard{ГОСТ30804.4.30-2013,
   title        = {ГОСТ 30804.4.30-2013 (IEC 61000-4-30:2008) Электрическая энергия. Совместимость технических средств электромагнитная. Методы измерений показателей качества электрической энергии (с Поправкой)},
+  organization = {М.: Стандартинформ},
   number       = {ГОСТ 30804.4.30-2013},
-  url          = {http://docs.cntd.ru/document/1200104665},
   year         = {2014},
+  url          = {http://docs.cntd.ru/document/1200104665},
   annotation   = {ГОСТ Р 51317.4.30-2008 недействующий, ГОСТ 30804.4.30-2013 действующий},
   date         = {2014-01-01},
   file         = {2014 - ГОСТ 30804.4.30-2013 Электрическая энергия. Совме.pdf:files/130/2014 - ГОСТ 30804.4.30-2013 Электрическая энергия. Совме.pdf:application/pdf;2014 - ГОСТ 30804.4.30-2013 Электрическая энергия. Совме.pdf:files/157/2014 - ГОСТ 30804.4.30-2013 Электрическая энергия. Совме.pdf:application/pdf},
   urldate      = {2019-11-16},
 }
 
-@Standard{GOST33073-2014,
-  organization = {М.: Стандартинформ},
+@Standard{ГОСТ33073-2014,
   title        = {{ГОСТ} 33073-2014 Электрическая энергия. Совместимость технических средств электромагнитная. Контроль и мониторинг качества электрической энергии в системах электроснабжения общего назначения (с Поправкой)},
+  organization = {М.: Стандартинформ},
   number       = {ГОСТ 33073-2014},
   url          = {http://docs.cntd.ru/document/1200115349},
   annotation   = {Статус: действует},
@@ -78,9 +206,9 @@
   urldate      = {2019-12-03},
 }
 
-@Standard{GOST30804.4.7-2013,
-  organization = {М.: Стандартинформ},
+@Standard{ГОСТ30804.4.7-2013,
   title        = {ГОСТ 30804.4.7-2013 (IEC 61000-4-7:2009) Совместимость технических средств электромагнитная. Общее руководство по средствам измерений и измерениям гармоник и интергармоник для систем электроснабжения и подключаемых к ним технических средств (с Поправкой)},
+  organization = {М.: Стандартинформ},
   number       = {ГОСТ 30804.4.7-2013},
   url          = {http://docs.cntd.ru/document/1200103652/},
   annotation   = {ГОСТ Р 51317.4.7-2008 недействующий, ГОСТ 30804.4.7-2013 действующий},
@@ -89,9 +217,9 @@
   urldate      = {2019-12-03},
 }
 
-@Standard{GOST32144-2013,
-  organization = {М.: Стандартинформ},
+@Standard{ГОСТ32144-2013,
   title        = {ГОСТ 32144-2013 Электрическая энергия. Совместимость технических средств электромагнитная. Нормы качества электрической энергии в системах электроснабжения общего назначения},
+  organization = {М.: Стандартинформ},
   number       = {ГОСТ 32144-2013},
   url          = {http://docs.cntd.ru/document/1200104301},
   annotation   = {ГОСТ Р 54149-2010 недействующий, ГОСТ 32144-2013 действующий},
@@ -100,9 +228,9 @@
   urldate      = {2019-12-03},
 }
 
-@Standard{GOSTR54149-2010,
-  organization = {М.: Стандартинформ},
+@Standard{ГОСТР54149-2010,
   title        = {ГОСТ Р 54149-2010 Электрическая энергия. Совместимость технических средств электромагнитная. Нормы качества электрической энергии в системах электроснабжения общего назначения},
+  organization = {М.: Стандартинформ},
   number       = {ГОСТ Р 54149-2010},
   url          = {http://docs.cntd.ru/document/1200084639},
   annotation   = {ГОСТ Р 54149-2010 недействующий, ГОСТ 32144-2013 действующий},
@@ -111,9 +239,9 @@
   urldate      = {2019-12-03},
 }
 
-@Standard{GOSTR51317.4.30-2008,
-  organization = {М.: Стандартинформ},
+@Standard{ГОСТР51317.4.30-2008,
   title        = {ГОСТ Р 51317.4.30-2008 (МЭК 61000-4-30:2008) Электрическая энергия. Совместимость технических средств электромагнитная. Методы измерений показателей качества электрической энергии},
+  organization = {М.: Стандартинформ},
   number       = {ГОСТ Р 51317.4.30-2008},
   url          = {http://docs.cntd.ru/document/1200072576},
   annotation   = {ГОСТ Р 51317.4.30-2008 недействующий, ГОСТ 30804.4.30-2013 действующий},
@@ -122,9 +250,9 @@
   urldate      = {2019-12-03},
 }
 
-@Standard{GOSTR51317.4.7-2008,
-  organization = {М: Стандартинформ},
+@Standard{ГОСТР51317.4.7-2008,
   title        = {ГОСТ Р 51317.4.7-2008 Совместимость технических средств электромагнитная. Общее руководство по средствам измерений и измерениям гармоник и интергармоник для систем электроснабжения и подключаемых к ним технических средств},
+  organization = {М: Стандартинформ},
   number       = {ГОСТ Р 51317.4.7-2008},
   url          = {http://docs.cntd.ru/document/1200072575},
   annotation   = {ГОСТ Р 51317.4.7-2008 недействующий, ГОСТ 30804.4.7-2013 действующий},
@@ -133,9 +261,9 @@
   urldate      = {2019-12-03},
 }
 
-@Standard{GOST_R8.655-2009,
-  organization = {М.: Стандартинформ},
+@Standard{ГОСТР8.655-2009,
   title        = {ГОСТ Р 8.655-2009 Государственная система обеспечения единства измерений (ГСИ). Средства измерений показателей качества электрической энергии. Общие технические требования (с Изменением N 1)},
+  organization = {М.: Стандартинформ},
   number       = {ГОСТ Р 8.655-2009},
   url          = {http://docs.cntd.ru/document/1200075494},
   annotation   = {Действующий},
@@ -144,9 +272,9 @@
   urldate      = {2019-03-12},
 }
 
-@Standard{GOST13109-97,
-  organization = {М.: Стандартинформ},
+@Standard{ГОСТ13109-97,
   title        = {ГОСТ 13109-97 Электрическая энергия. Совместимость технических средств электромагнитная. Нормы качества электрической энергии в системах электроснабжения общего назначения},
+  organization = {М.: Стандартинформ},
   number       = {ГОСТ 13109-97},
   url          = {http://docs.cntd.ru/document/1200006034},
   annotation   = {Недействующий},
@@ -155,9 +283,9 @@
   urldate      = {2019-12-03},
 }
 
-@Standard{GOST30372-95,
-  organization = {М.: Стандартинформ},
+@Standard{ГОСТ30372-95,
   title        = {ГОСТ 30372-95 Совместимость технических средств электромагнитная. Термины и определения (аутентичен ГОСТ Р 50397-92)},
+  organization = {М.: Стандартинформ},
   number       = {ГОСТ 30372-95},
   url          = {http://docs.cntd.ru/document/1200015869},
   annotation   = {Недействующий},
@@ -166,9 +294,9 @@
   urldate      = {2019-12-03},
 }
 
-@Standard{GOST22261-94,
-  organization = {М.: Стандартинформ},
+@Standard{ГОСТ22261-94,
   title        = {ГОСТ 22261-94 Средства измерений электрических и магнитных величин. Общие технические условия (с Изменением N 1)},
+  organization = {М.: Стандартинформ},
   number       = {ГОСТ 22261-94},
   url          = {http://docs.cntd.ru/document/1200023321},
   annotation   = {Действующий},
@@ -177,9 +305,9 @@
   urldate      = {2019-12-03},
 }
 
-@Standard{GOST13109-87,
-  organization = {М.: Издательство стандартов},
+@Standard{ГОСТ13109-87,
   title        = {ГОСТ 13109-87 Электрическая энергия. Требования к качеству электрической энергии в электрических сетях общего назначения},
+  organization = {М.: Издательство стандартов},
   number       = {ГОСТ 13109-87},
   url          = {http://files.stroyinf.ru/Index2/1/4294838/4294838041.htm, http://docs.cntd.ru/document/495793283},
   annotation   = {Недействующий},
@@ -188,9 +316,9 @@
   urldate      = {2019-12-03},
 }
 
-@Standard{GOST8.216-88,
-  organization = {М.: Издательство стандартов},
+@Standard{ГОСТ8.216-88,
   title        = {ГОСТ 8.216-88 (СТ СЭВ 5645-86) Государственная система обеспечения единства измерений (ГСИ). Трансформаторы напряжения. Методика поверки},
+  organization = {М.: Издательство стандартов},
   number       = {ГОСТ 8.216-88},
   url          = {http://docs.cntd.ru/document/1200004559},
   annotation   = {Недействующий},
@@ -199,9 +327,9 @@
   urldate      = {2019-12-03},
 }
 
-@Standard{GOST19431-84,
-  organization = {М.: Издательство стандартов},
+@Standard{ГОСТ19431-84,
   title        = {ГОСТ 19431-84 Энергетика и электрификация. Термины и определения},
+  organization = {М.: Издательство стандартов},
   number       = {ГОСТ 19431-84},
   url          = {http://docs.cntd.ru/document/1200005816},
   annotation   = {Действующий},
@@ -210,9 +338,9 @@
   urldate      = {2019-12-03},
 }
 
-@Standard{GOST12.3.019-80,
-  organization = {М.: ИПК Издательство стандартов},
+@Standard{ГОСТ12.3.019-80,
   title        = {ГОСТ 12.3.019-80 Система стандартов безопасности труда (ССБТ). Испытания и измерения электрические. Общие требования безопасности (с Изменением N 1)},
+  organization = {М.: ИПК Издательство стандартов},
   number       = {ГОСТ 12.3.019-80},
   url          = {http://docs.cntd.ru/document/1200009523},
   annotation   = {Действующий},
@@ -221,9 +349,9 @@
   urldate      = {2019-12-03},
 }
 
-@Standard{GOST21027-75,
-  organization = {М.: Стандартинформ},
+@Standard{ГОСТ21027-75,
   title        = {ГОСТ 21027-75 Системы энергетические. Термины и определения (с Изменениями N 1, 2)},
+  organization = {М.: Стандартинформ},
   number       = {ГОСТ 21027-75},
   url          = {http://docs.cntd.ru/document/1200011375},
   annotation   = {Недействующий},
@@ -232,9 +360,9 @@
   urldate      = {2019-12-03},
 }
 
-@Standard{GOST16263-70,
-  organization = {М.: Издательство стандартов},
+@Standard{ГОСТ16263-70,
   title        = {ГОСТ 16263-70 Государственная система обеспечения единства измерений (ГСИ). Метрология. Термины и определения},
+  organization = {М.: Издательство стандартов},
   number       = {ГОСТ 16263-70},
   url          = {http://docs.cntd.ru/document/1200004807},
   annotation   = {Недействующий},
@@ -243,7 +371,7 @@
   urldate      = {2019-12-03},
 }
 
-@Standard{GOST13109-67,
+@Standard{ГОСТ13109-67,
   title      = {ГОСТ 13109-67 Электрическая энергия. Нормы качества электрической энергии у ее приемников, присоединенных к электрическим сетям общего назначения (с Изменениями N 1-3)},
   number     = {ГОСТ 13109-67},
   url        = {http://docs.cntd.ru/document/495836441},
@@ -253,12 +381,12 @@
   urldate    = {2019-12-03},
 }
 
-@Standard{GOSTR51317.4.15-2012,
-  organization = {М.: Стандартинформ},
+@Standard{ГОСТР51317.4.15-2012,
   title        = {ГОСТ Р 51317.4.15-2012 (МЭК 61000-4-15:2010) Совместимость технических средств электромагнитная. Фликерметр. Функциональные и конструктивные требования},
+  organization = {М.: Стандартинформ},
   number       = {ГОСТ Р 51317.4.15-2012},
-  url          = {http://docs.cntd.ru/document/1200096463},
   year         = {2013},
+  url          = {http://docs.cntd.ru/document/1200096463},
   annotation   = {Действующий},
   date         = {2012-01-01},
   urldate      = {2019-11-16},
@@ -272,22 +400,22 @@
   urldate = {2019-12-05},
 }
 
-@Article{Energy_Saving2009,
+@Article{закон2009энергосбережении,
   author  = {Закон, Федеральный},
-  journal = {№ 261-ФЗ от 23.11},
   title   = {Об энергосбережении и о повышении энергетической эффективности и о внесении изменений в отдельные законодательные акты Российской Федерации},
+  journal = {№ 261-ФЗ от 23.11},
   year    = {2009},
   file    = {Федеральный закон от 23_11_2009 N 261-ФЗ (ред_ от 03_08_2018.rtf:files/355/Федеральный закон от 23_11_2009 N 261-ФЗ (ред_ от 03_08_2018.rtf:application/msword},
   url     = {http://www.consultant.ru/document/cons_doc_LAW_93978/},
   urldate = {2019-12-06},
 }
 
-@Standard{GOST8.622-2013,
-  organization = {М.: Стандартинформ},
+@Standard{ГОСТ8.622-2013,
   title        = {ГОСТ 8.622-2013 Государственная система обеспечения единства измерений (ГСИ). Испытательное оборудование для определения коэффициента проникания тест-аэрозоля через средства индивидуальной защиты органов дыхания. Методика аттестации},
+  organization = {М.: Стандартинформ},
   number       = {ГОСТ 8.622-2013},
-  url          = {http://docs.cntd.ru/document/1200108162},
   year         = {2013},
+  url          = {http://docs.cntd.ru/document/1200108162},
   annotation   = {Действующий},
   date         = {2015-01-01},
   urldate      = {2019-12-06},
@@ -438,20 +566,20 @@
   urldate = {2019-12-16},
 }
 
-@Article{Comparative_analysis_Kiselev_2016,
+@Article{Киселёв,
   author  = {Киселёв Богдан Юрьевич},
-  journal = {Молодой ученый №20},
   title   = {Сравнительный анализ стандартов качества электрической энергии {ГОСТ} 13109–97 и {ГОСТ} 32144–2013},
+  journal = {Молодой ученый №20},
   year    = {2016},
   url     = {https://moluch.ru/archive/124/34114/},
   urldate = {2019-12-18},
 }
 
-@Book{Quality_electricity_1975,
-  author    = {Левин, Моисей Соломонович and Мурадян, Артик Егорович and Сырых, Николай Николаевич},
-  publisher = {Энергия},
+@Book{левин1975качество,
   title     = {Качество электроэнергии в сетях сельских районов},
+  publisher = {Энергия},
   year      = {1975},
+  author    = {Левин, Моисей Соломонович and Мурадян, Артик Егорович and Сырых, Николай Николаевич},
 }
 
 @Online{prist,
@@ -478,17 +606,17 @@
   urldate = {2020-01-09},
 }
 
-@Online{Mars-Energo,
+@Online{Марс-Энерго,
+  title    = {{Э}лектроизмерительные приборы от производителя {НПП} {М}арс-{Э}нерго},
+  note     = {{ISO} 9001:2015},
   abstract = {Проектирование, производство, обслуживании высокоточных электроизмерительных приборов и поверочных установок для электроэнергетики},
   date     = {1999},
   file     = {Snapshot:files/526/www.mars-energo.ru.html:text/html},
-  note     = {{ISO} 9001:2015},
-  title    = {{Э}лектроизмерительные приборы от производителя {НПП} {М}арс-{Э}нерго},
   url      = {http://www.mars-energo.ru},
   urldate  = {2020-01-09},
 }
 
-@Online{energy_tester,
+@Online{энерготестер,
   title   = {{Э}нерготестер {ПКЭ-А}},
   url     = {http://www.mars-energo.ru/home/pribory-kontrolya-kachestva-i-ucheta-elektroenergii/energotester-pke-a.html},
   urldate = {2020-01-09},
@@ -502,20 +630,20 @@
   urldate = {2020-01-09},
 }
 
-@Online{energy_union,
-  file    = {НПФ "ЭНЕРГОСОЮЗ":files/530/www.energosoyuz.spb.ru.html:text/html},
+@Online{энергосоюз,
   title   = {{НПФ} <<{ЭНЕРГОСОЮЗ}>>},
+  file    = {НПФ "ЭНЕРГОСОЮЗ":files/530/www.energosoyuz.spb.ru.html:text/html},
   url     = {https://www.energosoyuz.spb.ru/},
   urldate = {2020-01-09},
 }
 
-@Online{neva-pa,
+@Online{нева-па,
   title   = {{У}стройство противоаварийной автоматики <<НЕВА-ПА>>},
   url     = {https://www.energosoyuz.spb.ru/ru/content/ustroystvo-protivoavariynoy-avtomatiki-neva-pa},
   urldate = {2020-01-09},
 }
 
-@Online{breakthrough,
+@Online{прорыв,
   title   = {{П}редприятие НПФ <<Прорыв>>},
   url     = {https://proryvnpp.ru/},
   urldate = {2020-01-09},
@@ -631,37 +759,37 @@
   url       = {https://www.sciencedirect.com/science/article/abs/pii/S014206151300327X},
 }
 
-@Article{6484158,
-  author  = {M. D. {Kušljević}},
-  journal = {IEEE Transactions on Instrumentation and Measurement},
-  title   = {On LS-Based Power Frequency Estimation Algorithms},
-  year    = {2013},
-  number  = {7},
-  pages   = {2020-2028},
-  volume  = {62},
-  doi     = {10.1109/TIM.2013.2248254},
+@Article{kuvsljevic2013ls,
+  author    = {Ku{\v{s}}ljevi{\'c}, Miodrag D},
+  title     = {On LS-based power frequency estimation algorithms},
+  journal   = {IEEE Transactions on Instrumentation and Measurement},
+  year      = {2013},
+  volume    = {62},
+  number    = {7},
+  pages     = {2020--2028},
+  publisher = {IEEE} # url,
 }
 
-@Article{1458847,
-  author  = {A. K. {Pradhan} and A. {Routray} and A. {Basak}},
-  journal = {IEEE Transactions on Power Delivery},
-  title   = {Power system frequency estimation using least mean square technique},
-  year    = {2005},
-  number  = {3},
-  pages   = {1812-1816},
-  volume  = {20},
-  doi     = {10.1109/TPWRD.2004.843453},
+@Article{pradhan2005power,
+  author    = {Pradhan, AK and Routray, A and Basak, Abir},
+  title     = {Power system frequency estimation using least mean square technique},
+  journal   = {IEEE transactions on power delivery},
+  year      = {2005},
+  volume    = {20},
+  number    = {3},
+  pages     = {1812--1816},
+  publisher = {IEEE} # url,
 }
 
-@Article{6899625,
-  author  = {Y. {Xia} and Z. {Blazic} and D. P. {Mandic}},
-  journal = {IEEE Transactions on Instrumentation and Measurement},
-  title   = {Complex-Valued Least Squares Frequency Estimation for Unbalanced Power Systems},
-  year    = {2015},
-  number  = {3},
-  pages   = {638-648},
-  volume  = {64},
-  doi     = {10.1109/TIM.2014.2351291},
+@Article{xia2014complex,
+  author    = {Xia, Yili and Blazic, Zoran and Mandic, Danilo P},
+  title     = {Complex-valued least squares frequency estimation for unbalanced power systems},
+  journal   = {IEEE Transactions on Instrumentation and Measurement},
+  year      = {2014},
+  volume    = {64},
+  number    = {3},
+  pages     = {638--648},
+  publisher = {IEEE} # url,
 }
 
 @Article{ramos2015frequency,
@@ -805,7 +933,7 @@
   year    = {1999},
 }
 
-@Article{Modeling_Questions_Lyutarevich2013,
+@Article{лютаревич2013вопросы,
   author    = {Лютаревич, Александр Геннадьевич and Горюнов, Владимир Николаевич and Долингер, Станислав Юрьевич and Хацевич, Константин Владимирович},
   journal   = {Омский научный вестник},
   title     = {Вопросы моделирования устройств обеспечения качества электрической энергии},
@@ -815,7 +943,7 @@
   url       = {https://cyberleninka.ru/article/n/voprosy-modelirovaniya-ustroystv-obespecheniya-kachestva-elektricheskoy-energii},
 }
 
-@Article{Accounting_Higher_harmonics_Plans_2013,
+@Article{планков2013учет,
   author    = {Планков, АА},
   journal   = {Современные проблемы науки и образования},
   title     = {Учет высших гармоник при исследовании динамической устойчивости узлов электроэнергетических систем с асинхронной нагрузкой},
@@ -897,7 +1025,7 @@
   publisher = {IEEE},
 }
 
-@Book{Quick_conversion_1985,
+@Book{нуссбаумер1985быстрое,
   author    = {Нуссбаумер, Генри},
   publisher = {Радио и связь},
   title     = {Быстрое преобразование Фурье и алгоритмы вычисления сверток},
@@ -915,7 +1043,7 @@
   publisher = {Elsevier},
 }
 
-@Book{Digital_processing_Goldenberg_1985,
+@Book{гольденберг1985цифровая,
   author    = {Гольденберг, Лев Моисеевич and Матюшкин, Борис Дмитриевич and Поляк, Михаил Николаевич and others},
   publisher = {Радио и связь},
   title     = {Цифровая обработка сигналов: Справочник},
@@ -983,7 +1111,7 @@
   объем     = {3},
 }
 
-@Article{Time-frequency_Avramchuk_2009,
+@Article{аврамчук2009частотно,
   author    = {Аврамчук, Валерий Степанович and Тьяу, Чан Вьет},
   journal   = {Известия Томского политехнического университета},
   title     = {Частотно-временной корреляционный анализ цифровых сигналов},
@@ -994,7 +1122,7 @@
   publisher = {Томский политехнический университет},
 }
 
-@Article{Optimization_Computational_Altman2008,
+@Article{альтман2008оптимизация,
   author    = {Альтман, Евгений Анатольевич},
   journal   = {Омский научный вестник},
   title     = {Оптимизация вычислительной схемы быстрого преобразования Фурье},
@@ -1003,7 +1131,7 @@
   publisher = {Федеральное государственное бюджетное образовательное учреждение высшего~…},
 }
 
-@InProceedings{Building_suboptimal_Altman_2017,
+@InProceedings{альтман2017построение,
   author    = {Альтман, ЕА},
   booktitle = {Информационно-телекоммуникационные системы и технологии},
   title     = {Построение субоптимальных моделей алгоритмов БПФ по основанию 2},
@@ -1011,11 +1139,19 @@
   pages     = {409--411},
 }
 
-@Article{Increase_Accuracy_Yelizarov2014,
+@Article{елизаров2014повышение,
   author  = {Елизаров, Дмитрий Александрович},
   journal = {Омск: дис.… канд. техн. наук},
   title   = {Повышение точности оценки показателей несинусоидальности напряжения в электроэнергетических системах},
   year    = {2014},
+}
+
+@InProceedings{васеева2020сравнительное,
+  author    = {Васеева, ТВ and Альтман, ЕА and Александров, АВ},
+  booktitle = {Инновационные проекты и технологии в образовании, промышленности и на транспорте},
+  title     = {СРАВНИТЕЛЬНОЕ ИССЛЕДОВАНИЕ ГАРМОНИЧЕСКИХ И ИНТЕРГАРМОНИЧЕСКИХ МЕТОДОВ ОЦЕНКИ СИГНАЛОВ},
+  year      = {2020},
+  pages     = {51--57},
 }
 
 @Article{santamaria2000comparative,
@@ -1124,14 +1260,14 @@
   publisher = {JSTOR},
 }
 
-@Book{Digital_processing_Sergienko_2011,
+@Book{сергиенко2011цифровая,
   author    = {Сергиенко, Александр Борисович},
   publisher = {БХВ-Петербург},
   title     = {Цифровая обработка сигналов},
   year      = {2011},
 }
 
-@Article{Definition_parameters_Altman_2012,
+@Article{альтман2012определение,
   author  = {Альтман, ЕА and Елизаров, ДА},
   journal = {Современные проблемы радиоэлектроники: сб. науч. тр./Сиб. федер. ун-т. Красноярск},
   title   = {Определение параметров гармоник однотональных сигналов},
@@ -1233,7 +1369,7 @@
   doi     = {10.1109/IEEESTD.2014.6826459},
 }
 
-@Article{Interharmonics_in_systems_Zhezhelenko_1999,
+@Article{жежеленко1999интергармоники,
   author    = {Жежеленко, Игорь Владимирович and Саенко, Юрий Леонидович and Бараненко, Татьяна Константиновна},
   journal   = {Вестник Приазовского государственного технического университета. Серия: Технические науки},
   title     = {Интергармоники в системах электроснабжения промпредприятий},
@@ -1242,7 +1378,7 @@
   publisher = {Государственное высшее учебное заведение {\guillemotleft}Приазовский государственный~…},
 }
 
-@Article{Calculation_Current_Mikheev_2017,
+@Article{михеев2017расчёт,
   author    = {Михеев, Георгий Михайлович and Атаманов, Михаил Николаевич and Афанасьева, Ольга Владимировна and Дрей, Надежда Михайловна},
   journal   = {Вестник Чувашского университета},
   title     = {Расчёт тока конденсаторных батарей с учетом источников высших гармоник},
@@ -1291,14 +1427,17 @@
   volume       = {2},
 }
 
-@Article{Improving_methods_Shizma_2014,
+@Article{,
+}
+
+@Article{чижма2014совершенствование,
   author  = {Чижма, Сергей Николаевич},
   journal = {Омск, ОГУПС},
   title   = {Совершенствование методов и средств контроля качества электроэнергии и составляющих мощности в электроэнергетических системах с тяговой нагрузкой},
   year    = {2014},
 }
 
-@Article{Harmonic_analysis_Goldstein2009,
+@Article{гольдштейн2009гармонический,
   author    = {Гольдштейн, ЕИ and Радаев, ЕВ},
   journal   = {Электричество},
   title     = {Гармонический анализ токов (напряжений) при наличии в них интергармоник и неизвестном периоде результирующего сигнала},
@@ -1308,7 +1447,7 @@
   publisher = {Федеральное государственное бюджетное образовательное учреждение высшего~…},
 }
 
-@Article{Development_method_Osipov_2017,
+@Article{осипов2017разработка,
   author    = {Осипов, Дмитрий Сергеевич and Коваленко, Дмитрий Валерьевич and Файфер, Лилия Андреевна and Киселёв, Богдан Юрьевич and Долгих, Надежда Николаевна},
   journal   = {Омский научный вестник},
   title     = {Разработка метода расчета потерь мощности в токоведущих частях при наличии интергармоник},
@@ -1327,7 +1466,7 @@
   publisher = {Elsevier},
 }
 
-@Article{energy_saving_law_2019,
+@Article{закон_энергосбережении_2019,
   author  = {Закон, Федеральный},
   journal = {Доступ из справ.-правовой системы {\guillemotleft}КонсультантПлюс},
   title   = {Об энергосбережении и о повышении энергетической эффективности и о внесении изменений в отдельные законодательные акты Российской Федерации (с изменениями на 26 июля 2019 года)},
