--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,98 +1,118 @@
 
-{\actuality} Обзор, введение в тему, обозначение места данной работы в
-мировых исследованиях и~т.\:п., можно использовать ссылки на~другие
-работы~\autocite{Gosele1999161}
-(если их~нет, то~в~автореферате
-автоматически пропадёт раздел <<Список литературы>>). Внимание! Ссылки
-на~другие работы в~разделе общей характеристики работы можно
-использовать только при использовании \verb!biblatex! (из-за технических
-ограничений \verb!bibtex8!. Это связано с тем, что одна
-и~та~же~характеристика используются и~в~тексте диссертации, и в
-автореферате. В~последнем, согласно ГОСТ, должен присутствовать список
-работ автора по~теме диссертации, а~\verb!bibtex8! не~умеет выводить в одном
-файле два списка литературы).
-При использовании \verb!biblatex! возможно использование исключительно
-в~автореферате подстрочных ссылок
-для других работ командой \verb!\autocite!, а~также цитирование
-собственных работ командой \verb!\cite!. Для этого в~файле
-\verb!common/setup.tex! необходимо присвоить положительное значение
-счётчику \verb!\setcounter{usefootcite}{1}!.
+{\actuality} 
+Диссертационная работа посвящена совершенствованию методов оценки гармонических и интергармонических составляющих напряжения. Проблема является актуальной и требует новых решений по данным вопросам.
 
-Для генерации содержимого титульного листа автореферата, диссертации
-и~презентации используются данные из файла \verb!common/data.tex!. Если,
-например, вы меняете название диссертации, то оно автоматически
-появится в~итоговых файлах после очередного запуска \LaTeX. Согласно
-ГОСТ 7.0.11-2011 <<5.1.1 Титульный лист является первой страницей
-диссертации, служит источником информации, необходимой для обработки и
-поиска документа>>. Наличие логотипа организации на~титульном листе
-упрощает обработку и~поиск, для этого разметите логотип вашей
-организации в папке images в~формате PDF (лучше найти его в векторном
-варианте, чтобы он хорошо смотрелся при печати) под именем
-\verb!logo.pdf!. Настроить размер изображения с логотипом можно
-в~соответствующих местах файлов \verb!title.tex!  отдельно для
-диссертации и автореферата. Если вам логотип не~нужен, то просто
-удалите файл с~логотипом.
+%Известны алгоритмы, описывающие способы оценки спектральных составляющих напряжения: интерполяционные методы, метод корреляционных функций и усовершенствованные методы корреляционных функций, методы, рекомендованные в ГОСТ. При малом уровне шума (10 дБ) интерполяционные методы более практичны, чем методы корреляционных функций из-за высокой вычислительной сложности [7].
+%
+%% Елизаров Д. А. Повышение точности оценки показателей несинусоидальности напряжения в электроэнергетических системах //Омск: дис.… канд. техн. наук. – 2014.
+%
+%Спектр сигнала определяется зависимостью сигнала от времени. Временная область и частотная связанны друг с другом с помощью преобразования Фурье. Практически преобразование Фурье определяется с помощью систем цифровой обработки сигналов (ЦОС). Точность гармонических моделей может обеспечить цифровая обработка сигналов, при условии, что математической основой является Дискретное преобразование Фурье (ДПФ) или Быстрое преобразование Фурье (БПФ) [1-13]. Для анализа сигнала, преобразуют непрерывный сигнал в последовательность чисел (отчетов) и применяют алгоритм ускоренного вычисления дискретного преобразования Фурье (БПФ). С помощью отчетов непрерывный входной сигнал преобразуется в дискретный во времени сигнал.
+%
+%
+%
+%Алгоритмы оценки параметров гармоник, применяемые при работе с однональными и многотональными сигналами, имеют точность оценки параметров ниже теоретической границы Крамера-Рао. Граница Крамера-Рао позволяет найти минимальную дисперсию оценки параметра сигнала. Для гармонических сигналов известны формулы, оценивающие дисперсии амплитуды, частоты и фазы гармоник, однако, известные методы их оценки показывают результаты выше этой границы. В том числе не достигает границы Крамера-Рао и метод корреляционного анализа, который находит гармоники по методу максимального правдоподобия. 
+%
+%
+%Корреляция может быть вычислена по алгоритмам циклической свертки, для этого необходимо прочитать один из двух сигналов в обратном порядке. Быстрый метод вычисления циклической свертки состоит в использовании теоремы о свертке и дискретного преобразования Фурье [40, 42]. Эффективные алгоритмы преобразования Фурье описаны в работах J. Cooley, S. Winograd, R. Blahut, Г. Нуссбаумера, Л. М. Гольденберга, А. Оппенгейма и других ученых. Еще один класс быстрых методов вычисления корреляции состоит в ее разложении на более короткие. Z.J. Mou, Y. Naito, Л. Рабинер и другие исследователи предложили и описали эти алгоритмы в своих работах [47, 46, 48].
+%
+%Значительный вклад в решение вопросов по измерению показателей КЭ и определению интергармоник внесли зарубежные ученые: Arrillaga~J, Neville~R. Watson, Jos~Arrillaga, Bruce~C.~Smith, Alan~R.~Wood, S.~Chen, Yonghe~H.~Liu, Nicholas~J. Murray, C.P.~Arnold, B.J.~Harker.
 
-\ifsynopsis
-Этот абзац появляется только в~автореферате.
-Для формирования блоков, которые будут обрабатываться только в~автореферате,
-заведена проверка условия \verb!\!\verb!ifsynopsis!.
-Значение условия задаётся в~основном файле документа (\verb!synopsis.tex! для
-автореферата).
-\else
-Этот абзац появляется только в~диссертации.
-Через проверку условия \verb!\!\verb!ifsynopsis!, задаваемого в~основном файле
-документа (\verb!dissertation.tex! для диссертации), можно сделать новую
-команду, обеспечивающую появление цитаты в~диссертации, но~не~в~автореферате.
-\fi
+{\aim} данной работы является совершенствование алгоритмов оценки параметров гармоник многотонального сигнала.
 
-% {\progress}
-% Этот раздел должен быть отдельным структурным элементом по
-% ГОСТ, но он, как правило, включается в описание актуальности
-% темы. Нужен он отдельным структурынм элемементом или нет ---
-% смотрите другие диссертации вашего совета, скорее всего не нужен.
+{\researchObject} являются алгоритмы оценки параметров гармоник в силовых электрических сетях.
 
-{\aim} данной работы является \ldots
+{\researchSubject} является точность и быстродействие алгоритмов оценки параметров гармоник.
 
 Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
 \begin{enumerate}
-  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
-  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
-  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
-  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
+  \item Анализ математических основ объекта исследования и формулировка математической модели многотонального сигнала.
+  
+  \item Изучение и экспериментальное исследование алгоритмов оценки параметров гармоник.
+  
+  \item Развитие математической модели многотональных сигналов в части расчета точности оценки амплитуды применительно к используемому при оценке параметров гармоник подходу, связанному с применением оконных функций.
+  
+  \item Разработка численных методов для оценки параметров гармоник, позволяющих достичь расчетной точности для амплитуды гармоники.
+  
+  \item Разработка алгоритмов для эффективного выполнения численных методов из предыдущей задачи.
+  
+  \item Разработка комплекса программа для анализа и доработки алгоритмов оценки параметров гармоник многотональных сигналов.
 \end{enumerate}
 
 
 {\novelty}
+%В частности, ВАК отклонила диссертацию, в которой автор «представил научную новизну в виде  процесса,  а  не  результата».
+% В формулировке положений,  выносимых  на защиту, должны  содержаться  отличительные признаки новых  научных результатов,  характеризующие  вклад  соискателя  в область науки,  к которой относится тема диссертации. Они должны содержать не только краткое изложение сущности  полученных  результатов,  но  и  сравнительную  оценку  их  научной  и  практической значимости.
+ 
 \begin{enumerate}
-  \item Впервые \ldots
-  \item Впервые \ldots
-  \item Было выполнено оригинальное исследование \ldots
+  \item Уточнена математическая модель спектра многотонального сигнала полученными и экспериментально проверенными формулами для нахождения границы Крамера-Рао при оценке амплитуды гармоники для взвешенного оконной функцией сигнала.
+  
+  \item Предложен численный метод нахождения оптимальной несмещенной оценки амплитуды гармоники на основе корреляционного анализа, а также предложена его быстрая реализация на основе алгоритмов разряженного БПФ.
+  
+  \item Реализован комплекс программ для экспериментальной проверки полученных в работе формул и анализа алгоритмов оценки параметров гармоник многотональных сигналов.
 \end{enumerate}
 
-{\influence} \ldots
+{\influence} 
 
-{\methods} \ldots
+\begin{enumerate}
+	\item Выведена формула для нахождения границы Крамера-Рао при применении оконной функции, которая позволяет повысить эффективность научных исследований различных алгоритмов обработки сигналов с применением оконных функций, заменив моделирование алгоритма с применением различных окон расчетом по предложенной формуле.
+	
+	\item Предложенный численный метод, вместе с его быстрой реализацией, позволяют повысить точность и достоверность результатов измерительных приборов для электрических сетей.
+	
+	\item Разработанный комплекс программ позволяет проводить научные исследования в области цифровой обработки сигналов и используется в учебном процессе.
+\end{enumerate}
+
+На основании теоретических и экспериментальных исследований разработан и зарегистрирована программа, написанная на языке программирования Pytnon, позволяющая решать задачи спектрального анализа напряжений в электроэнергетической системе, а так же оценивать параметры гармоник многотонального сигнала.
+
+
+{\methods} 
+Исследования состояла в итерационном изучении объекта исследования с попеременным уточнением его модели с точки зрения математического описания и с точки зрения его программной реализации. При этом использовались методы исследования основанные на математическом анализе и математической статистики с одной стороны и методы численного моделирования с использованием платформы SciPy для языка программирования Python с другой.
+
+% Второй вариант методов
+%Для решения поставленных задач в диссертационной работе использовались методы математического анализа и теории вероятностей, численные методы. Исследования алгоритмов осуществлялось на ЭВМ с помощью языков программирования Python и С. 
+
 
 {\defpositions}
 \begin{enumerate}
-  \item Первое положение
-  \item Второе положение
-  \item Третье положение
-  \item Четвертое положение
+  \item Дополнение к математической модели многотонального сигнала в виде формулы, позволяющей определить дисперсию оценки амплитуды гармоники, отличающемуся от известной границы Крамера-Рао учетом изменения дисперсии после применения оконных функций.
+  \item Основанный на корреляционном анализе численный метод, позволяющий определить параметры гармоник сигналов с точностью, определяемой уточненной границей Крамера-Рао, включающий в себя вычислительно-эффективную схему расчета корреляций и отличающийся от известных методов отсутствием потерь в точности результатов при интерполировании параметров гармоник.
+  \item Комплекс программ для анализа и построения алгоритмов оценки параметров многотональных сигналов.
 \end{enumerate}
-В папке Documents можно ознакомиться в решением совета из Томского ГУ
-в~файле \verb+Def_positions.pdf+, где обоснованно даются рекомендации
-по~формулировкам защищаемых положений.
+%В папке Documents можно ознакомиться в решением совета из Томского ГУ
+%в~файле \verb+Def_positions.pdf+, где обоснованно даются рекомендации
+%по~формулировкам защищаемых положений.
 
-{\reliability} полученных результатов обеспечивается \ldots \ Результаты находятся в соответствии с результатами, полученными другими авторами.
+{\reliability} 
+научных результатов, выводов и рекомендаций диссертации определяются корректным применением
+общенаучных методов исследования и математических методов, а также
+надежной информационной базой исследования. Выводы диссертационного исследования не противоречат известным теоретическим и практическим результатам, содержащимся в трудах отечественных и зарубежных ученых в области повышения энергетической эффективности.
 
+
+% второй вариант
+%полученных результатов обеспечивается теоретически и на практике при проведении эксперимента, подтверждена исследованиями на ЭВМ, написано на языке программирования Python, в среде IDE JetBrains PyCharm Community Edition 2018.3.1 x64.  
 
 {\probation}
 Основные результаты работы докладывались~на:
-перечисление основных конференций, симпозиумов и~т.\:п.
+\begin{enumerate}
+\item Инновационные проекты и технологии в образовании, промышленности и на транспорте \cite{comparative_study2020}.  
 
-{\contribution} Автор принимал активное участие \ldots
+\item Инновации в информационных технологиях, машиностроении и автотранспорте. Сборник материалов III Международной научно-практической конференции \cite{complexity_assessment2019}.
+
+\item Надежность функционирования и информационная безопасность инфокоммуникационных, телекоммуникационных и радиотехнических сетей и систем. Материалы всероссийской научно-технической конференции. \cite{modern_information2019}. 
+
+\item Инновационные проекты и технологии в образовании, промышленности и на транспорте. Материалы научной конференции, посвященной Дню Российской науки. Омский государственный университет путей сообщения. \cite{comparative_analysis2019}.
+
+\item Системы управления, информационные технологии и математическое моделирование. Материалы I Всероссийской научно-практической конференции с международным участием \cite{comparative_analysis}.
+
+\item Проблемы машиноведения. Материалы III Международной научно-технической конференции \cite{cache_oriented2019}.
+
+\item Информационные и управляющие системы на транспорте и в промышленности. Материалы II всероссийской научно-технической конференции \cite{accuracy_study2018}.
+
+\item Тезисы XIX Всероссийской конференции молодых учёных по математическому моделированию и информационным технологиям. Тезисы докладов \cite{efficiency_mark2018}.
+
+\item  САПР и моделирование в современной электронике. Cборник научных трудов II Международной научно-практической конференции \cite{information-measuring2018}
+
+\end{enumerate}
+%{\contribution} Автор принимал активное участие \ldots
 
 \ifnumequal{\value{bibliosel}}{0}
 {%%% Встроенная реализация с загрузкой файла через движок bibtex8. (При желании, внутри можно использовать обычные ссылки, наподобие `\cite{vakbib1,vakbib2}`).
@@ -159,29 +179,33 @@
     \fi
 }
 
-При использовании пакета \verb!biblatex! будут подсчитаны все работы, добавленные
-в файл \verb!biblio/author.bib!. Для правильного подсчёта работ в~различных
-системах цитирования требуется использовать поля:
-\begin{itemize}
-        \item \texttt{authorvak} если публикация индексирована ВАК,
-        \item \texttt{authorscopus} если публикация индексирована Scopus,
-        \item \texttt{authorwos} если публикация индексирована Web of Science,
-        \item \texttt{authorconf} для докладов конференций,
-        \item \texttt{authorother} для других публикаций.
-\end{itemize}
-Для подсчёта используются счётчики:
-\begin{itemize}
-        \item \texttt{citeauthorvak} для работ, индексируемых ВАК,
-        \item \texttt{citeauthorscopus} для работ, индексируемых Scopus,
-        \item \texttt{citeauthorwos} для работ, индексируемых Web of Science,
-        \item \texttt{citeauthorvakscopuswos} для работ, индексируемых одной из трёх баз,
-        \item \texttt{citeauthorscopuswos} для работ, индексируемых Scopus или Web of~Science,
-        \item \texttt{citeauthorconf} для докладов на конференциях,
-        \item \texttt{citeauthorother} для остальных работ,
-        \item \texttt{citeauthor} для суммарного количества работ.
-\end{itemize}
-% Счётчик \texttt{citeexternal} используется для подсчёта процитированных публикаций.
-
-Для добавления в список публикаций автора работ, которые не были процитированы в
-автореферате требуется их~перечислить с использованием команды \verb!\nocite! в
-\verb!Synopsis/content.tex!.
+%При использовании пакета \verb!biblatex! будут подсчитаны все работы, добавленные
+%в файл \verb!biblio/author.bib!. Для правильного подсчёта работ в~различных
+%системах цитирования требуется использовать поля:
+%\begin{itemize}
+%        \item \texttt{authorvak} если публикация индексирована ВАК,
+%        \item \texttt{authorscopus} если публикация индексирована Scopus,
+%        \item \texttt{authorwos} если публикация индексирована Web of Science,
+%        \item \texttt{authorconf} для докладов конференций,
+%        \item \texttt{authorother} для других публикаций.
+%\end{itemize}
+%
+%
+%
+%
+%Для подсчёта используются счётчики:
+%\begin{itemize}
+%        \item \texttt{citeauthorvak} для работ, индексируемых ВАК,
+%        \item \texttt{citeauthorscopus} для работ, индексируемых Scopus,
+%        \item \texttt{citeauthorwos} для работ, индексируемых Web of Science,
+%        \item \texttt{citeauthorvakscopuswos} для работ, индексируемых одной из трёх баз,
+%        \item \texttt{citeauthorscopuswos} для работ, индексируемых Scopus или Web of~Science,
+%        \item \texttt{citeauthorconf} для докладов на конференциях,
+%        \item \texttt{citeauthorother} для остальных работ,
+%        \item \texttt{citeauthor} для суммарного количества работ.
+%\end{itemize}
+%% Счётчик \texttt{citeexternal} используется для подсчёта процитированных публикаций.
+%
+%Для добавления в список публикаций автора работ, которые не были процитированы в
+%автореферате требуется их~перечислить с использованием команды \verb!\nocite! в
+%\verb!Synopsis/content.tex!.
