--- a/common/newnames.tex
+++ b/common/newnames.tex
@@ -9,6 +9,8 @@
 \newcommand{\progressTXT}{Степень разработанности темы.}
 % цели и задачи;
 \newcommand{\aimTXT}{Целью}
+\newcommand{\researchObjectTXT}{Объектом исследования}
+\newcommand{\researchSubjectTXT}{Предметом исследования}
 \newcommand{\tasksTXT}{задачи}
 % научную новизну;
 \newcommand{\noveltyTXT}{Научная новизна:}
